column-wrap fix

--- a/src/components/KeyBoard.scss
+++ b/src/components/KeyBoard.scss
@@ -31,6 +31,6 @@
     justify-content: center;
     display: flex;
     flex-wrap: wrap;
-    column-gap: 44px;
+    column-gap: 47px;
     row-gap: 20px;
 }
